# DRF_snippet_api

./: .pre-commit-config.yaml  db.sqlite3  pyproject.toml  schema.yml
snippets/: models.py  serializers.py  urls.py  views.py
snippets/migrations/: 0001_initial.py
tutorial/: settings.py  urls.py
